--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_DB=wg_forge_db
-POSTGRES_USER=wg_forge
-POSTGRES_PASSWORD=42a
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
